--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.2.0",
+    "@tanstack/react-query": "^4.33.0",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^4.10.1",
     "react-router-dom": "^6.15.0",
     "sass": "^1.65.1",
     "zod": "^3.21.4"
